[gd_scene load_steps=25 format=3 uid="uid://sl022k4fd34i"]

[ext_resource type="PackedScene" uid="uid://558jyxbbd8qo" path="res://Entities/NPCs/BikerRed/BikerRed.tscn" id="1_5kce8"]
[ext_resource type="Script" path="res://Entities/Bosses/Red/RedBoss.gd" id="2_e5vdc"]
[ext_resource type="Shader" path="res://UI/Flash.gdshader" id="3_0l51s"]
[ext_resource type="AudioStream" uid="uid://cqrakdrhpbeng" path="res://Assets/Audio/Sounds/snd_boing.ogg" id="4_8pn6b"]
[ext_resource type="AudioStream" uid="uid://dpx7vlckej0fx" path="res://Assets/Audio/Sounds/snd_impact.ogg" id="4_31auw"]
[ext_resource type="AudioStream" uid="uid://ove2yba2ijse" path="res://Assets/Audio/Sounds/snd_motorbike_start.ogg" id="5_7y30u"]
[ext_resource type="AudioStream" uid="uid://fnlty76hihhw" path="res://Assets/Audio/Sounds/snd_charging.ogg" id="5_b5qi6"]
[ext_resource type="AudioStream" uid="uid://clyhrb1tguqrs" path="res://Assets/Audio/Sounds/snd_beeping.ogg" id="7_ppp3c"]
[ext_resource type="AudioStream" uid="uid://dm5rkfclgyjy1" path="res://Assets/Audio/Sounds/snd_motorbike_revved.ogg" id="7_v51m3"]
[ext_resource type="AudioStream" uid="uid://bnh3ephjqd6if" path="res://Assets/Audio/Sounds/snd_spinning.ogg" id="9_ky1h6"]
[ext_resource type="AudioStream" uid="uid://jqruyrsi4she" path="res://Assets/Audio/Sounds/snd_woosh.ogg" id="11_djs80"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_63tp1"]
shader = ExtResource("3_0l51s")
shader_parameter/enabled = true
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="Animation" id="Animation_ty7qy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6qfcm"]
resource_name = "spinning"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cjoij"]
_data = {
"RESET": SubResource("Animation_ty7qy"),
"spinning": SubResource("Animation_6qfcm")
}

[sub_resource type="Animation" id="Animation_wpfpb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -52)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:material:shader_parameter/flash_value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sounds/MotorbikeStart:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sounds/Boing:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sounds/Impact:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sounds/Beeping:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sounds/Swish:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sounds/Stomp:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sounds/Woosh:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7q0ho"]
resource_name = "breathing"
length = 0.7
loop_mode = 1
step = 0.175
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 2.73208),
"update": 0,
"values": [Vector2(0, -52), Vector2(2.38419e-07, -43.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 2.73208),
"update": 0,
"values": [Vector2(2, 2), Vector2(3.11111, 1.67308)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:material:shader_parameter/flash_value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sounds/Beeping:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0q7fi"]
resource_name = "charging"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -52), Vector2(-3.33786e-06, -37.5), Vector2(0, -46.9), Vector2(-3.33786e-06, -32.5), Vector2(0, -46.9), Vector2(-3.33786e-06, -32.5), Vector2(0, -52)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(3, 1.442), Vector2(2.2, 1.80385), Vector2(3.5, 1.25), Vector2(2.2, 1.80385), Vector2(3.5, 1.25), Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sounds/MotorbikeStart:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cibmp"]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1.86607, 1),
"update": 0,
"values": [Vector2(0, -52), Vector2(0, -85), Vector2(0, -52)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sounds/Boing:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sounds/Swish:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ruuw0"]
resource_name = "jump_charge"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 0.5, 1, 1),
"update": 0,
"values": [Vector2(0, -52), Vector2(-1.66893e-06, -37.5), Vector2(-1.66893e-06, -37.5), Vector2(0, -52)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 0.5, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(3.03704, 1.44231), Vector2(3.03704, 1.44231), Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sounds/Stomp:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_quiag"]
resource_name = "superjump"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.45, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 2.2974, 0.68302, 2.2974, 2.73208),
"update": 0,
"values": [Vector2(0, -52), Vector2(-4.47035e-07, -26), Vector2(0, -19.25), Vector2(-4.47035e-07, -26), Vector2(0, -900)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.45, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 2.2974, 0.68302, 2.2974, 2.14355),
"update": 0,
"values": [Vector2(2, 2), Vector2(3.5, 1), Vector2(4, 0.740385), Vector2(3.5, 1), Vector2(0.1, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sounds/Woosh:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.75),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_65mgc"]
resource_name = "superjump_land"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.525, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 4.28709, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -900), Vector2(0, -52), Vector2(4.76837e-06, -24), Vector2(0, -52), Vector2(-5.96046e-07, -67), Vector2(0, -52)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.525, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 4.28709, 1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 3), Vector2(2, 2), Vector2(4.74074, 0.923077), Vector2(2, 2), Vector2(1.40741, 2.57692), Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sounds/Impact:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lglu7"]
_data = {
"RESET": SubResource("Animation_wpfpb"),
"breathing": SubResource("Animation_7q0ho"),
"charging": SubResource("Animation_0q7fi"),
"jump": SubResource("Animation_cibmp"),
"jump_charge": SubResource("Animation_ruuw0"),
"superjump": SubResource("Animation_quiag"),
"superjump_land": SubResource("Animation_65mgc")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_i0r8a"]
radius = 17.5

[node name="RedBoss" instance=ExtResource("1_5kce8")]
script = ExtResource("2_e5vdc")

[node name="Sprite" parent="." index="1"]
material = SubResource("ShaderMaterial_63tp1")

[node name="Spinner" type="AnimationPlayer" parent="Sprite" index="0"]
libraries = {
"": SubResource("AnimationLibrary_cjoij")
}

[node name="Hitbox" parent="." index="2"]
visible = true

[node name="Impact" parent="Sounds" index="3"]
volume_db = 0.0

[node name="ImpactQuiet" type="AudioStreamPlayer2D" parent="Sounds" index="4"]
stream = ExtResource("4_31auw")
volume_db = -3.0

[node name="Boing" type="AudioStreamPlayer2D" parent="Sounds" index="5"]
stream = ExtResource("4_8pn6b")
volume_db = 7.0

[node name="Charging" type="AudioStreamPlayer2D" parent="Sounds" index="6"]
stream = ExtResource("5_b5qi6")
volume_db = 5.0

[node name="MotorbikeStart" type="AudioStreamPlayer2D" parent="Sounds" index="7"]
stream = ExtResource("5_7y30u")

[node name="MotorbikeRevved" type="AudioStreamPlayer2D" parent="Sounds" index="8"]
stream = ExtResource("7_v51m3")

[node name="Spinning" type="AudioStreamPlayer2D" parent="Sounds" index="9"]
stream = ExtResource("9_ky1h6")
volume_db = 0.5
pitch_scale = 0.6

[node name="Beeping" type="AudioStreamPlayer2D" parent="Sounds" index="10"]
stream = ExtResource("7_ppp3c")
pitch_scale = 0.9

[node name="Woosh" type="AudioStreamPlayer2D" parent="Sounds" index="11"]
stream = ExtResource("11_djs80")
volume_db = 15.0
pitch_scale = 2.0

[node name="BattleAnims" type="AnimationPlayer" parent="." index="6"]
libraries = {
"": SubResource("AnimationLibrary_lglu7")
}

[node name="Hurtbox" type="Area2D" parent="." index="7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_i0r8a")
debug_color = Color(0.998058, 0, 0.151554, 0.42)
